:bug: fix search bugs

--- a/assets/media/gridea-search/result-template.ejs
+++ b/assets/media/gridea-search/result-template.ejs
@@ -24,7 +24,7 @@
             <% } %>
           </div>
         </div>
-        <% if (themeConfig.showFeatureImage && post.feature) { %>
+        <% if (post.feature) { %>
           <a href="<%= post.link %>">
             <div class="feature-container" style="background-image: url('<%= post.feature %>')">
             </div>
