--- a/templates/includes/head.ejs
+++ b/templates/includes/head.ejs
@@ -13,5 +13,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.css">
 <link rel="stylesheet" href="<%= themeConfig.domain %>/styles/main.css">
 
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="<%= themeConfig.domain %>/media/scripts/vue.js"></script>
 <script src="<%= themeConfig.domain %>/media/scripts/highlight.min.js"></script>
