:bug: fix search bugs

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -9,7 +9,7 @@
     <div id="app" class="main">             
       <%- include('./includes/header') %>
       <a name="content"></a>
-      <div class="content-container">
+      <div class="content-container" data-iscover="<%= site.customConfig.postCover %>">
         <%- include('./includes/post-list') %>
       </div>
 
