--- a/templates/includes/post-list.ejs
+++ b/templates/includes/post-list.ejs
@@ -61,6 +61,9 @@
         });
     }
     document.addEventListener("DOMContentLoaded", (event) => {
-        loadPic();
+        let con = document.querySelector('.content-container');
+        if (con.dataset.iscover){
+            loadPic();
+        }
     });
 </script>
