--- a/templates/includes/cover.ejs
+++ b/templates/includes/cover.ejs
@@ -19,7 +19,7 @@
                 </a>
             </div>
             <div class="cover-social-link">
-                <% ['github', 'twitter', 'weibo', 'zhihu', 'facebook', 'comment-dots'].forEach((item) => { %>
+                <% ['github', 'twitter', 'weibo', 'facebook', 'bilibili', 'zhihu'].forEach((item) => { %>
                     <% if (site.customConfig[item]) { %>
                       <a href="<%= site.customConfig[item] %>" target="_blank">
                         <i class="fab fa-<%= item %>"></i>
