--- a/templates/includes/footer.ejs
+++ b/templates/includes/footer.ejs
@@ -1,7 +1,7 @@
 <div class="site-footer">
   <div class="slogan"><%- themeConfig.siteDescription %></div>
   <div class="social-container">
-    <% ['github', 'twitter', 'weibo', 'zhihu', 'facebook', 'comment-dots'].forEach((item) => { %>
+    <% ['github', 'twitter', 'weibo', 'facebook', 'bilibili', 'zhihu'].forEach((item) => { %>
       <% if (site.customConfig[item]) { %>
         <a href="<%= site.customConfig[item] %>" target="_blank">
           <i class="fab fa-<%= item %>"></i>
