:sparkles: Add article page directory support

--- a/assets/styles/_blocks/list.less
+++ b/assets/styles/_blocks/list.less
@@ -1,9 +1,13 @@
 .main {
-    max-width: 882px;
+    max-width: 1111px;
     margin: 0 auto;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+}
+.main-small {
+    max-width: 900px;
+    margin: 0 auto 0 76px;
 }
 
 .content-container {
