--- a/assets/styles/_plug/gridea.less
+++ b/assets/styles/_plug/gridea.less
@@ -2,6 +2,8 @@ pre {
     font-size: 14px !important;
     word-spacing: normal !important;
     word-break: break-all !important;
+    white-space: pre-wrap !important;
+    // overflow-x: auto !important;
 }
 
 #write {
