--- a/assets/styles/_blocks/footer.less
+++ b/assets/styles/_blocks/footer.less
@@ -1,16 +1,17 @@
 .site-footer {
   text-align: center;
   font-size: 12px;
-  padding: 32px 16px;
-//   height: 107px;
+  padding: 16px 8px;
   color: #fff;
   background-image: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
-  .slogan {
-    margin-bottom: 24px;
-  }
   .social-container {
     margin-bottom: 24px;
     font-size: 16px;
+  }
+  .slogan {
+    display: inline-block;
+    font-size: 12px;
+    margin: 0 8px;
   }
   a {
     margin: 0 8px;
