--- a/assets/styles/_plug/valine.less
+++ b/assets/styles/_plug/valine.less
@@ -2,3 +2,10 @@
 .v[data-class=v] .vpower{
     display: none;
 }
+
+#gitalk-container {
+    box-shadow: 0 10px 35px 2px rgba(0, 0, 0, 15%), 0 5px 15px rgba(0, 0, 0, 7%), 0 2px 5px -5px rgba(0, 0, 0, 10%) !important;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px 16px;
+}
