:art: about TOC

--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -72,7 +72,7 @@
         tocbot.init({
             tocSelector: '.toc',
             contentSelector: '.post-content',
-            headingSelector: 'h1,h2,h3',
+            headingSelector: 'h1,h2,h3,h4',
             headingsOffset: 58,
         });
         // 检测页面滚动距离 用eventlistener
